<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/MainPage_Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@color/signInBackgroundColor"
        tools:ignore="ContentDescription">
    </ImageView>


    <ScrollView
        android:id="@+id/xxxxxx"
        android:layout_width="match_parent"
        android:layout_height="654.885dp">
        <LinearLayout
            android:id="@+id/x2xxxxx"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/xx3"
                android:layout_width="384.27dp"
                android:layout_height="62.37dp"
                android:layout_marginTop="27dp"
                android:layout_marginStart="13.365dp"
                android:enabled="true"
                style="@style/Button2"
                android:text="@string/text_MainMenu_upload"
                android:textColor="@color/white"
                >
            </Button>
            <Button
                android:id="@+id/MainPage_Account_Button02"
                android:layout_width="384.27dp"
                android:layout_height="62.37dp"
                android:layout_marginTop="27dp"
                android:layout_marginStart="13.365dp"
                android:enabled="true"
                style="@style/Button2"
                android:text="@string/text_MainMenu_upload"
                android:textColor="@color/white"
                >
            </Button>
            <Button
                android:id="@+id/MainPage_Account_Button03"
                android:layout_width="384.27dp"
                android:layout_height="62.37dp"
                android:layout_marginTop="27dp"
                android:layout_marginStart="13.365dp"
                android:enabled="true"
                style="@style/Button2"
                android:text="@string/text_MainMenu_upload"
                android:textColor="@color/white"
                >
            </Button>
        </LinearLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MainPage_MenuMask"
        android:layout_width="393.18dp"
        android:layout_height="129.195dp"
        android:layout_marginStart="8.91dp"
        android:layout_marginTop="752.895dp"
        android:alpha="1.0"
        style="@style/MenuMask">

        <ImageView
            android:id="@+id/MainPage_MenuButton1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="41.49375dp"
            android:layout_marginTop="16.929dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:src="@drawable/cd_logo_02" />

        <ImageView
            android:id="@+id/MainPage_MenuButton2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="41.49375dp"
            android:layout_marginTop="16.929dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/MainPage_MenuButton1"
            android:clickable="false"
            android:background="@null"
            android:src="@drawable/account_logo_01"/>

        <ImageView
            android:id="@+id/MainPage_MenuButton3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="41.49375dp"
            android:layout_marginTop="16.929dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/MainPage_MenuButton2"
            android:clickable="false"
            android:background="@null"
            android:src="@drawable/book_logo_01"/>

        <TextView
            android:id="@+id/MainPage_MenuText1"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/MainPage_MenuButton1"
            app:layout_constraintStart_toStartOf="@+id/MainPage_MenuButton1"
            android:text="@string/text_MainMenu_audio"
            android:fontFamily="@font/font_formal"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/menu_cyan"/>
        <TextView
            android:id="@+id/MainPage_MenuText2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/MainPage_MenuButton2"
            app:layout_constraintStart_toStartOf="@+id/MainPage_MenuButton2"
            android:text="@string/text_MainMenu_account"
            android:textSize="19sp"
            android:fontFamily="@font/font_formal"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/MainPage_MenuText3"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/MainPage_MenuButton3"
            app:layout_constraintStart_toStartOf="@+id/MainPage_MenuButton3"
            android:text="@string/text_MainMenu_tutorial"
            android:textSize="19sp"
            android:fontFamily="@font/font_formal"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>